--- a/cliente html/index.html
+++ b/cliente html/index.html
@@ -45,13 +45,8 @@
             <section class="content-grid">
                 <article class="panel player-panel">
                     <p>Estado del reproductor para compartir con otros oyentes</p>
-                    <div class="player-visual">
-                        <button id="btnPlay" class="play-btn" aria-label="Play/Pause">
-                            ▶
-                        </button>
-                    </div>
                     <div class="player-actions">
-                        <input type="number" id="idCancion" placeholder="ID numérico de la canción" min="1" step="1" />
+                        <small>La reproducción se sincroniza automáticamente al pedir una canción.</small>
                     </div>
                 </article>
 
