--- a/cliente html/index.html
+++ b/cliente html/index.html
@@ -479,7 +479,7 @@
 
                 <div class="form-group">
                     <label for="song-title">Título de la canción</label>
-                    <input id="song-title" type="text" placeholder="cancion1.mp3" value="cancion1.mp3" />
+                    <input id="song-title" type="text" placeholder="cancion1" value="cancion1" />
                 </div>
 
                 <div class="form-group">
@@ -491,7 +491,7 @@
                     </select>
                 </div>
 
-                <button id="btn-reproducir" class="btn-primary" onclick="pedirCancion(document.getElementById('song-title').value || 'cancion1.mp3', document.getElementById('format-select').value || 'mp3')" disabled>🎵 Cargar Canción</button>
+                <button id="btn-reproducir" class="btn-primary" onclick="pedirCancion(document.getElementById('song-title').value || 'cancion1', document.getElementById('format-select').value || 'mp3')" disabled>🎵 Cargar Canción</button>
             </div>
 
             <div id="custom-player" class="custom-player">
